--- a/config.json
+++ b/config.json
@@ -34,14 +34,14 @@
         "light_blockquote_border": "#d9a40d",
         "light_blockquote_text": "#222222",
         "light_meta_color": "#454545",
-        "dark_body_background_color": "#2f211a",
+        "dark_body_background_color": "#202020",
         "dark_body_text_color": "#e5e1de",
-        "dark_body_accent_color": "#b58650",
-        "dark_body_hover_color": "#9b5327",
-        "dark_card_background_color": "#3f2f27",
+        "dark_body_accent_color": "#efefef",
+        "dark_body_hover_color": "#0375d5",
+        "dark_card_background_color": "#2b2b2b",
         "dark_card_text_color": "#e5e1de",
-        "dark_card_accent_color": "#b58650",
-        "dark_card_hover_color": "#9b5327",
+        "dark_card_accent_color": "#0375d5",
+        "dark_card_hover_color": "#065ca5",
         "dark_shadow_color": "#080604",
         "dark_card_border_color": "#2b1e18",
         "dark_blockquote_color": "#f3f0ec",
